...
                            ItemListCell(itemListItem: item)
                        }
                    }
                    Section(LocalizedStringKey("Items")) {
                        ForEach(fetchedItemList.filter{$0.isFavorite == false}) {item in
                            ItemListCell(itemListItem: item)
                        } .accessibility(identifier: "itemList")
                    }
                    
                }
                    //add text with speech
                    RoundedRectangle(cornerRadius: 25)
                        .fill(Color.black.opacity(0.7))
...
                    Button(action: {
                        itemListVM.itemListTitle = ""
                        itemListVM.itemListItem = nil
                        addView.toggle()
                    }, label: {
                        Label("Add Item",systemImage: "plus")
                            .accessibility(identifier: "showAddItemButton")
                    })
                }
                .navigationTitle(LocalizedStringKey("GroceryList"))
        
            }
        }
...
